first version of results printed to page

--- a/Final_Project/Work on returning df as json object.ipynb
+++ b/Final_Project/Work on returning df as json object.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -31,32 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/emanshupatel/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From /Users/emanshupatel/anaconda3/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
-      "WARNING:tensorflow:From /Users/emanshupatel/anaconda3/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " model = keras.models.load_model(\"models/skin_model_1.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,88 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Label</th>\n",
-       "      <th>Prediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Melanocytic nevi</td>\n",
-       "      <td>0.0%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Melanoma</td>\n",
-       "      <td>32.6849%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Benign keratosis-like lesions</td>\n",
-       "      <td>0.0001%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Basal cell carcinoma</td>\n",
-       "      <td>0.0%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Actinic keratoses</td>\n",
-       "      <td>67.315%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Vascular lesions</td>\n",
-       "      <td>0.0%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Dermatofibroma</td>\n",
-       "      <td>0.0%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           Label Prediction\n",
-       "0               Melanocytic nevi       0.0%\n",
-       "1                       Melanoma   32.6849%\n",
-       "2  Benign keratosis-like lesions    0.0001%\n",
-       "3           Basal cell carcinoma       0.0%\n",
-       "4              Actinic keratoses    67.315%\n",
-       "5               Vascular lesions       0.0%\n",
-       "6                 Dermatofibroma       0.0%"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actinic keratoses 67.315%\n",
+      "Melanoma 32.685%\n",
+      "Melanocytic nevi 0.0%\n"
+     ]
     }
    ],
    "source": [
@@ -193,21 +98,89 @@
     "\n",
     "result_df = pd.DataFrame(columns=['Label',\"Prediction\"])\n",
     "\n",
-    "for x,y in zip(preds[0],labels):\n",
-    "    \n",
-    "    result_df = result_df.append({'Label': y, 'Prediction': str(round(x*100, 4)) + \"%\"}, ignore_index=True)\n",
-    "    \n",
-    "result_df"
+    "for x, y in zip(preds[0], labels):\n",
+    "\n",
+    "            updated_preds = list(\n",
+    "                map(lambda x: str(round(x*100, 3)) + \"%\", preds[0]))\n",
+    "\n",
+    "            dictionary = dict(zip(labels, updated_preds))\n",
+    "\n",
+    "            # create a function which returns the value of a dictionary\n",
+    "\n",
+    "            def keyfunction(k):\n",
+    "                return dictionary[k]\n",
+    "\n",
+    "            diagnosis = []\n",
+    "            \n",
+    "for key in sorted(dictionary, key=keyfunction, reverse=True)[:3]:\n",
+    "                    print(key, dictionary[key])\n",
+    "\n",
+    "                    diagnosis.append([key,dictionary[key]])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Actinic keratoses', '67.315%'],\n",
+       " ['Melanoma', '32.685%'],\n",
+       " ['Melanocytic nevi', '0.0%']]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diagnosis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df.sort_values(by=['Prediction'], ascending=False, inplace=True)"
+    "dictList = []\n",
+    "\n",
+    "for key, value in new_dict.items():\n",
+    "    dictList.append([key, value])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Actinic keratoses', '67.315%'],\n",
+       " ['Melanoma', '32.685%'],\n",
+       " ['Melanocytic nevi', '0.0%']]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
