--- a/Final_Project/Work on returning df as json object.ipynb
+++ b/Final_Project/Work on returning df as json object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = os.path.join(\"uploads/king-of-the-hill-wallpaper.jpg\")\n",
+    "filepath = os.path.join(\"uploads/Screen Shot 2019-03-19 at 9.55.03 PM.png\")\n",
     "\n",
     "\n",
     "image_size = (75, 100)\n",
@@ -68,82 +68,94 @@
     "                                                    grayscale=False)\n",
     "\n",
     "# preprocess the image and prepare it for classification\n",
-    "image = prepare_image(im)\n"
+    "image = prepare_image(im)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Actinic keratoses 67.315%\n",
-      "Melanoma 32.685%\n",
-      "Melanocytic nevi 0.0%\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[['Actinic keratoses', '99.999%)'],\n",
+       " ['Benign keratosis-like lesions', '0.001%)']]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "labels = ['Melanocytic nevi','Melanoma','Benign keratosis-like lesions', 'Basal cell carcinoma',\n",
     "    'Actinic keratoses','Vascular lesions','Dermatofibroma']\n",
     "\n",
+    "labels = tuple(labels)\n",
     "\n",
     "preds = model.predict(image)\n",
-    "# results = decode_predictions(preds)\n",
+    "\n",
+    "# convert preds array to list\n",
+    "preds = preds.tolist()\n",
+    "\n",
+    "#convert list of lists to one list for rounding to work\n",
+    "flat_preds = [item for sublist in preds for item in sublist]\n",
+    "\n",
+    "updated_preds = list(map(lambda x : (round(x*100,3)), flat_preds))\n",
     "\n",
     "\n",
+    "dictionary = dict(zip(labels, updated_preds))\n",
     "\n",
-    "result_df = pd.DataFrame(columns=['Label',\"Prediction\"])\n",
+    "dictionary\n",
+    " #Prints as:\n",
+    "#{'Melanocytic nevi': 61.27,\n",
+    "#'Melanoma': 74.22,\n",
+    "# 'Benign keratosis-like lesions': 0.0,\n",
+    "# 'Basal cell carcinoma': 0.0,\n",
+    "# 'Actinic keratoses': 0.0,\n",
+    "# 'Vascular lesions': 0.0,\n",
+    "# 'Dermatofibroma': 0.0}\n",
     "\n",
-    "for x, y in zip(preds[0], labels):\n",
+    "# create a function which returns the value of a dictionary\n",
+    "def keyfunction(k):\n",
+    "    return dictionary[k]\n",
     "\n",
-    "            updated_preds = list(\n",
-    "                map(lambda x: str(round(x*100, 3)) + \"%\", preds[0]))\n",
     "\n",
-    "            dictionary = dict(zip(labels, updated_preds))\n",
+    "diagnosis = []\n",
     "\n",
-    "            # create a function which returns the value of a dictionary\n",
     "\n",
-    "            def keyfunction(k):\n",
-    "                return dictionary[k]\n",
-    "\n",
-    "            diagnosis = []\n",
-    "            \n",
+    "# sort by dictionary by the values and print top 3 {key, value} pairs\n",
     "for key in sorted(dictionary, key=keyfunction, reverse=True)[:3]:\n",
-    "                    print(key, dictionary[key])\n",
-    "\n",
-    "                    diagnosis.append([key,dictionary[key]])\n",
-    "\n"
+    "    \n",
+    "    if dictionary[key] > 0:\n",
+    "       \n",
+    "        diagnosis.append([key, str(dictionary[key]) + \"%)\"])\n",
+    "    \n",
+    "    \n",
+    "diagnosis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Actinic keratoses', '67.315%'],\n",
-       " ['Melanoma', '32.685%'],\n",
-       " ['Melanocytic nevi', '0.0%']]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "diagnosis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
